3823B1FI3/2_gelu_cuda/frolova_sofya/log.txt
/home/crazyproger/sandbox/cuda-2026/3823B1FI3/2_gelu_cuda/frolova_sofya/gelu_cuda.cu(46): error: identifier "I" is undefined
          cudaStreamCreate(&streams[I]);
                                    ^

/home/crazyproger/sandbox/cuda-2026/3823B1FI3/2_gelu_cuda/frolova_sofya/gelu_cuda.cu(57): error: identifier "I" is undefined
                          cudaMemcpyHostToDevice, streams[I]);
                                                          ^

/home/crazyproger/sandbox/cuda-2026/3823B1FI3/2_gelu_cuda/frolova_sofya/gelu_cuda.cu(73): error: identifier "I" is undefined
      for (int i = 0; i < num_streams; ++i) cudaStreamDestroy(streams[I]);
                                                                      ^

3 errors detected in the compilation of "/home/crazyproger/sandbox/cuda-2026/3823B1FI3/2_gelu_cuda/frolova_sofya/gelu_cuda.cu".
